test/tests/compiler/9_functions/valid/libraries/system_call_client.plx
pub fn incr_and_print(c: i32) i32;

pub fn main(none) i32 {
    incr_and_print(70)
    return 0
}
